Fix an issue where debugger not showing all arguments anymore after hitting SQL error while debugging. Fixes #5101
Added a "Clear All" button to the argument dialog which will clear all the saved arguments values from SQLite DB.

--- a/web/pgadmin/tools/debugger/static/scss/_debugger.scss
+++ b/web/pgadmin/tools/debugger/static/scss/_debugger.scss
@@ -16,3 +16,10 @@
     -ms-user-select: text;
     user-select: text;
 }
+
+.debugger-args {
+    display: block;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
